public class Main
{
    public static void main(String[] args)
    {
        StreamingService streaming = new StreamingService();

        streaming.start();
    }
}
